--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <version>${flexmark.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.vladsch.flexmark</groupId>
+            <artifactId>flexmark-docx-converter</artifactId>
+            <version>${flexmark.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.TomasMikula</groupId>
             <artifactId>RichTextFX</artifactId>
             <version>${richtextfx.version}</version>
