--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,9 @@
             <version>${flexmark.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.vladsch.flexmark</groupId>
-            <artifactId>flexmark-docx-converter</artifactId>
-            <version>${flexmark.version}</version>
+            <groupId>org.docx4j</groupId>
+            <artifactId>docx4j-ImportXHTML</artifactId>
+            <version>3.3.1</version>
         </dependency>
         <dependency>
             <groupId>com.github.TomasMikula</groupId>
@@ -79,6 +79,11 @@
             <groupId>com.atlassian.renderer</groupId>
             <artifactId>atlassian-renderer</artifactId>
             <version>${atlassian.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>3.3.9</version>
         </dependency>
     </dependencies>
 
