--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
     <artifactId>textmd</artifactId>
     <version>0.1.0</version>
 
+    <name>TextMd</name>
+
     <properties>
         <global.finalName>textmd</global.finalName>
         <flexmark.version>0.27.0</flexmark.version>
@@ -35,6 +37,7 @@
         <compiler.version>3.6.1</compiler.version>
         <rsyntaxtextarea.version>2.6.1</rsyntaxtextarea.version>
         <atlassian.version>8.0.5</atlassian.version>
+        <lanaguage-tool.version>3.9</lanaguage-tool.version>
         <java.version>1.8</java.version>
         <mainClass>com.desive.TextMd</mainClass>
     </properties>
@@ -84,6 +87,16 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-model</artifactId>
             <version>3.3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.languagetool</groupId>
+            <artifactId>languagetool-core</artifactId>
+            <version>${lanaguage-tool.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.languagetool</groupId>
+            <artifactId>language-all</artifactId>
+            <version>${lanaguage-tool.version}</version>
         </dependency>
     </dependencies>
 
