--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
             <artifactId>language-all</artifactId>
             <version>${lanaguage-tool.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>15.0</version>
+        </dependency>
     </dependencies>
 
     <build>
